--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <p>in 50 years 3 billion people will be living in areas considered too hot for survival.In 2021 more than 7 million acres in the united states burned from wild fires.While wildfires are a natural and necessary process for many ecosystems,but the amount of stuff burned and all the houses that burnt down has been increasing because of the overpopulation and because of droughts and all of the ahs form the wildfires will affect all the children with asthma because it would make it even harder to breath,all the wildfires cause more then 33,000 deaths globally
   <h1>overpopulaiton effects on the environment</h1>
   <p>Overpopulation destroys the environment by more deforestation, decreased biodiversity and pollution. More people means an increase in cost for resources so everything will be more expensive and a lot of people could become homeless, and there is a higher chance for a pandemic to happen because of all the people. There will be a higher chance of a virus or pandemic happening is because they usually come from animals and since there will be more people that means more killing of animals and that could lead to new viruses or ones that have been discovered already
- </p>
+Sea levels worldwide rising at increasing speeds because of the temperature increase,if us humans don't reduce the amount of greenhouse gas is in the atmosphere,the levels will rise another 3-4 feet
+</p>
   <h1> Link to sources </h1>
   
 <a href="Sources.html"> Sources.</a> 
