--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<title>Overpopulation</title>
+<title>AI project(forked from giovannis project and recoded)</title>
 <html>
 <head> 
 
 <body> 
 
-<h1> overpopulation effects </h1>
+<h1> Thesis statement </h1>
 <p> The big effect of overpopulation on animals is starvation because we will be killing more animals and we will be killing animals that other animals eat.when there is to many animals,the food per animal is less.The effects of global warming are already bringing harm to human communities and the natural world,further temperature rises will have devastating impact and more action on greenhouse gas emissions is urgently requiredMultiple factors contribute to climate change, and multiple actions are needed to address it. The number of people on our planet is one of those factors. Every additional person increases carbon emissions — the rich far more than the poor — and increases the number of climate change victims – the poor far more than the rich.With the world’s human population poised to hit 7 billion on Oct. 31, the Center for Biological Diversity today released a list of the top 10 plants and animals in the United States facing extinction from pressure caused by overpopulation.“There’s a cost that comes with having 7 billion people on our planet, especially when it comes to species already on the brink of extinction,” said Amy Harwood, the Center’s 7 Billion and Counting campaign coordinator. “The polar bear, Florida panther and bluefin tuna are just a few of the species being pushed toward extinction by the world’s rapidly growing population. People have taken away habitat for plants and animals, sucked up their water, and surrounded them with pollution, causing a global mass extinction crisis.”As the human population grows and rich countries continue to consume resources at voracious rates, we are crowding out, poisoning and eating all other species into extinction. With the world population hitting 7 billion, the Center is marking this milestone by releasing a list of species in the United States facing extinction  </p>
 
   
@@ -14,10 +14,10 @@
   <p>Overpopulation destroys the environment by more deforestation, decreased biodiversity and pollution. More people means an increase in cost for resources so everything will be more expensive and a lot of people could become homeless, and there is a higher chance for a pandemic to happen because of all the people. There will be a higher chance of a virus or pandemic happening is because they usually come from animals and since there will be more people that means more killing of animals and that could lead to new viruses or ones that have been discovered already
 Sea levels worldwide rising at increasing speeds because of the temperature increase,if us humans don't reduce the amount of greenhouse gas is in the atmosphere,the levels will rise another 3-4 feet
 </p>
-  <h1> Link to sources </h1>
+  <h1> Sources and attempts </h1>
   
 <a href="Sources.html"> Sources.</a> 
-
+<a href="Sources.html"> Attempts.</a> 
 </body>
 
 
