--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ Chatgpt has a limit of messages per hour, So I can only say so many things at on
   <h1> Sources and attempts </h1>
   
 <a href="Sources.html"> Sources.</a> 
-<a href="Sources.html"> Attempts.</a> 
+<a href="Untitled document.docx"> Attempts.</a> 
   <a href="Sources.html"> Genres.</a> 
 </body>
 
