--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ Chatgpt has a limit of messages per hour, So I can only say so many things at on
   <h1> Sources and attempts </h1>
   
 <a href="Sources.html"> Sources.</a> 
-<a href="Untitled document.docx"> Attempts.</a> 
+<a href="https://docs.google.com/document/d/1hMPEPpEbZe08ex7MYy-B1wuQXoYZe1O1scyIX8Y_7mA/edit?usp=share_link"> Attempts.</a> 
   <a href="Sources.html"> Genres.</a> 
 </body>
 
