--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@ Chatgpt has a limit of messages per hour, So I can only say so many things at on
 -------------------------------------------------------------------------------------------------------------------------------
  </p>
   <h1>Summary of research</h1>
-  <p>(insert Summary)</p>
+  <p>Our thesis statement is that if AI can simulate a society. If so, what are its limits and capabilities? We already had a few limitations like having a limit of words to write and not having any credible sources. On our first attempt everything was going fine when we realized that ChatGPT didn’t countdown time correctly it went up instead of going down. Because this happened we decided to make our own AI but we needed to pay. When we fixed it giving it a new script, it worked perfectly when we used our command words like “Advance”, “Event”, “Age”, And “Stats”.This Proves our thesis statement that AI can simulate a society.</p>
   <h1> Sources and attempts </h1>
   
 <a href="Sources.html"> Sources.</a> 
 <a href="https://docs.google.com/document/d/1hMPEPpEbZe08ex7MYy-B1wuQXoYZe1O1scyIX8Y_7mA/edit?usp=share_link"> Attempts.</a> 
-  <a href="Sources.html"> Genres.</a> 
+  <a href="https://docs.google.com/presentation/d/1jdQurntn6EqCuRBghUpQXsAbUTiwRkjL-H0TW9URPXo/edit?usp=sharing"> Genres.</a> 
+    <h1> Research </h1>
+  <a href="https://docs.google.com/document/d/e/2PACX-1vSdMr_AfxYeHZWmnfKzxQqddg_P7C7BBrOkQaEq7L9hTmTAA1PwmzxevzXxcCDZS7y-291koEg4REyl/pub"> Genres.</a> 
 </body>
 
 
