--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@ Chatgpt has a limit of messages per hour, So I can only say so many things at on
 <a href="Sources.html"> Sources.</a> 
 <a href="https://docs.google.com/document/d/1hMPEPpEbZe08ex7MYy-B1wuQXoYZe1O1scyIX8Y_7mA/edit?usp=share_link"> Attempts.</a> 
   <a href="https://docs.google.com/presentation/d/1jdQurntn6EqCuRBghUpQXsAbUTiwRkjL-H0TW9URPXo/edit?usp=sharing"> Genres.</a> 
+  <a href="AIproject.html"> AI draft.</a>
     <h1> Research </h1>
-  <a href="https://docs.google.com/document/d/e/2PACX-1vSdMr_AfxYeHZWmnfKzxQqddg_P7C7BBrOkQaEq7L9hTmTAA1PwmzxevzXxcCDZS7y-291koEg4REyl/pub"> Genres.</a> 
+  <a href="https://docs.google.com/document/d/e/2PACX-1vSdMr_AfxYeHZWmnfKzxQqddg_P7C7BBrOkQaEq7L9hTmTAA1PwmzxevzXxcCDZS7y-291koEg4REyl/pub"> Research.</a> 
 </body>
 
 
